# billeasy

./: .gitignore  BillEasy_Build_and_Release_Plan.md  BillEasy_Implementation_Plan.md  DEPLOYMENT_GUIDE.md  InstallationLog.txt  SETUP.md  index.html  package-lock.json  package.json  run.bat  tailwind.config.js  vite.config.js
.github/workflows/: release.yml
scripts/: gen-icons.js
src/: App.jsx  index.css
src-tauri/: Cargo.toml  USB001  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  models.rs
src-tauri/src/commands/: license.rs  menu.rs  mod.rs  orders.rs  print.rs  settings.rs
src/components/: Cart.jsx  CategoryTabs.jsx  ItemCard.jsx  PasswordGate.jsx  ReceiptPreview.jsx  UpdateBanner.jsx
src/lib/: tauri.js
src/pages/: History.jsx  LicenseScreen.jsx  POS.jsx  Recent.jsx  Setup.jsx
src/store/: cartStore.js  cloudinaryStore.js  menuStore.js  settingsStore.js
