[package]
name = "billeasy"
version = "2.0.0"
description = "BillEasy Desktop Billing App"
authors = ["BillEasy"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
base64 = "0.22"
qrcode = "0.14"
dirs = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

